# ToDoList

./: .gitignore  CMakeLists.txt  Display.cpp  Display.h  HashTaskEntity.cpp  HashTaskEntity.h  IdGenerator.h  ServerRun.cpp  Task.cpp  Task.h  TaskEntity.cpp  TaskEntity.h  TaskID.cpp  TaskID.h  TaskService.cpp  TaskService.h  View.cpp  View.h  main.cpp
API/: TaskService.cpp  TaskService.h
CLI/: AddTaskState.cpp  AddTaskState.h  BaseState.cpp  BaseState.h  Builder.h  Client.cpp  Client.h  ClientInterface.h  Command.h  CommandFactory.cpp  CommandFactory.h  CommandsValidator.cpp  CommandsValidator.h  Context.cpp  Context.h  ExitState.h  InputStateMachine.cpp  InputStateMachine.h  InputStateMachineInterface.h  InputStateMachineMock.cpp  State.h  StateMachine.cpp  StateMachine.h  StateMachineInterface.h  Tokenizer.cpp  Tokenizer.h  Validator.cpp  Validator.h  ViewState.cpp  ViewState.h  ViewTaskState.h  Visitor.h
CLI/Builders/Add/: AddSubTaskCommandBuilder.cpp  AddSubTaskCommandBuilder.h  AddTaskCommandBuilder.cpp  AddTaskCommandBuilder.h
CLI/Builders/Get/: GetSubTasksCommandBuilder.cpp  GetSubTasksCommandBuilder.h  GetTaskCommandBuilder.cpp  GetTaskCommandBuilder.h
CLI/Builders/Other/: CompleteTaskCommandBuilder.cpp  CompleteTaskCommandBuilder.h  DeleteTaskCommandBuilder.cpp  DeleteTaskCommandBuilder.h  PostponeTaskCommandBuilder.cpp  PostponeTaskCommandBuilder.h
CLI/Builders/Serialize/: LoadCommandBuilder.cpp  LoadCommandBuilder.h  SaveCommandBuilder.cpp  SaveCommandBuilder.h
CLI/Commands/: CancelCommand.cpp  CancelCommand.h
CLI/Commands/Add/: AddSubTaskCommand.cpp  AddSubTaskCommand.h  AddTaskCommand.cpp  AddTaskCommand.h
CLI/Commands/Get/: GetSubtasksCommand.cpp  GetSubtasksCommand.h  GetTaskCommand.cpp  GetTaskCommand.h
CLI/Commands/Other/: CompleteTaskCommand.cpp  CompleteTaskCommand.h  DeleteTaskCommand.cpp  DeleteTaskCommand.h  PostponeTaskCommand.cpp  PostponeTaskCommand.h
CLI/Commands/Serialize/: LoadCommand.cpp  LoadCommand.h  SaveCommand.cpp  SaveCommand.h
CLI/Contexts/: AddContext.cpp  AddContext.h  Context.cpp  Context.h  ContextInterface.h  InputContext.cpp  InputContext.h  InputContextInterface.h
CLI/Factories/: BuilderFactory.cpp  BuilderFactory.h  BuilderFactoryInterface.h  VisitorFactory.cpp  VisitorFactory.h  VisitorFactoryInterface.h
CLI/Factories/Validators/: GeneralCommandsValidator.cpp  GeneralInputValidator.h  (+2 more)
CLI/Input_Output/: IOStream.cpp  IOStream.h  IOStreamInterface.h
CLI/States/: AddSubTaskState.cpp  AddSubTaskState.h  AddTaskState.cpp  AddTaskState.h  BaseState.cpp  BaseState.h  ExitState.cpp  ExitState.h  InputState.h  State.h  TaskDateState.cpp  TaskDateState.h  TaskIdState.cpp  TaskIdState.h  TaskLabelState.cpp  TaskLabelState.h  TaskNameState.cpp  TaskNameState.h  TaskPriorityState.cpp  TaskPriorityState.h  ViewState.h  ViewTaskState.cpp  ViewTaskState.h
CLI/Utils/: InputContextCreator.cpp  InputContextCreator.h  InputContextCreatorInterface.h  InputStateMachineCreator.cpp  InputStateMachineCreator.h  InputStateMachineCreatorInterface.h
CLI/Validators/: AddSubTaskValidator.cpp  AddSubTaskValidator.h  AddTaskValidator.cpp  AddTaskValidator.h  BaseStateValidator.cpp  BaseStateValidator.h  DateValidator.cpp  DateValidator.h  GetTaskValidator.cpp  GetTaskValidator.h  LabelValidator.cpp  LabelValidator.h  PriorityValidator.cpp  PriorityValidator.h  TaskIdValidator.cpp  TaskIdValidator.h  TaskNameValidator.cpp  TaskNameValidator.h  Validator.h  ViewTaskValidator.cpp  ViewTaskValidator.h
Core/API/: CoreAPI.cpp  CoreAPI.h  CoreAPIInterface.h  Task.cpp  Task.h  TaskDTO.cpp  TaskDTO.h  TaskID.cpp  TaskID.h  TaskService.cpp  TaskService.h  dtoConvertor.cpp
Core/Model/: AllDataStorage.cpp  AllDataStorage.h  AllDataStorageFactory.cpp  AllDataStorageFactory.h  AllDataStorageFactoryInterface.h  AllDataStorageInterface.h  HashTaskID.cpp  HashTaskID.h  IdGenerator.cpp  IdGenerator.h  Storage.cpp  Storage.h  StorageInterface.h  StorageService.cpp  StorageService.h  StorageServiceInterface.h  TaskEntity.cpp  TaskEntity.h  TaskService.cpp  TaskService.h  TaskServiceInterface.h  dtoConvertor.cpp  dtoConvertor.h
Core/Serialization/: Persistor.cpp  Persistor.h  PersistorUtils.cpp  PersistorUtils.h  PersitorUtils.cpp  Serializer.h
Core/Views/: DateView.cpp  DateView.h  GeneralView.h  LabelView.cpp  LabelView.h  PriorityView.cpp  PriorityView.h  ViewService.cpp  ViewService.h  ViewServiceInterface.h
Display/: Display.cpp  Display.h
Model/: AllDataStorage.cpp  AllDataStorage.h  DTOconvertor.cpp  DTOconvertor.h  HashTaskEntity.h  HashTaskID.cpp  HashTaskID.h  Storage.cpp  Storage.h  StorageService.cpp  StorageService.h  Task.cpp  Task.h  TaskDTO.cpp  TaskDTO.h  TaskEntity.cpp  TaskEntity.h  TaskID.cpp  TaskID.h  dtoConvertor.cpp  dtoConvertor.h
ProtoFile/: CoreService.proto  StorageModel.proto
SerializationUtils/: SerializationUtils.cpp  SerializationUtils.h
Tests/: DateViewTest.cpp  IdGeneratorTest.cpp  LabelViewTest.cpp  PriorityViewTest.cpp  SerializationUtilsTest.cpp  StorageServiceTest.cpp  StorageTest.cpp  TaskDtoTest.cpp  TaskEntityTest.cpp  TaskIdTest.cpp  TaskServiceTest.cpp  TaskTest.cpp  ViewServiceTest.cpp
Tests/CLI/: ContextTest.cpp  InputStateMachineTest.cpp  StateMachineTest.cpp
Views/: DateView.cpp  DateView.h  GeneralView.h  LabelView.cpp  LabelView.h  PriorityView.cpp  PriorityView.h  ViewService.cpp  ViewService.h
src/API/: Task.cpp  Task.h  TaskDTO.cpp  TaskDTO.h  TaskID.cpp  TaskID.h  TaskService.cpp  TaskService.h  dtoConvertor.cpp  dtoConvertor.h
src/Display/: Display.cpp  Display.h
src/Model/: AllDataStorage.cpp  AllDataStorage.h  AllDataStorageInterface.h  HashTaskID.cpp  HashTaskID.h  IdGenerator.cpp  IdGenerator.h  Storage.cpp  Storage.h  StorageInterface.h  StorageService.cpp  StorageService.h  StorageServiceInterface.h  Task.cpp  Task.h  TaskDTO.cpp  TaskDTO.h  TaskEntity.cpp  TaskEntity.h  TaskID.cpp  TaskID.h  dtoConvertor.cpp  dtoConvertor.h
src/Views/: DateView.cpp  DateView.h  GeneralView.h  LabelView.cpp  LabelView.h  PriorityView.cpp  PriorityView.h  ViewService.cpp  ViewService.h
(+186 files in other folders)
